# pixels

./: README.md  pixels.cabal  stack.yaml
src/Codec/BMP/: Pixels.hs
test/: Spec.hs
