name:                pixels
version:             0.1.0.0
-- synopsis:
-- description: Extends Codec.BMP with a pixel abstraction
homepage:            https://github.com/eHammarstrom/pixels#readme
license:             BSD3
license-file:        LICENSE
author:              Emil Hammarström
maintainer:          emil.a.hammarstrom@gmail.com
copyright:           MIT
category:            Codec.BMP
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codec.BMP.Pixels
  build-depends:       base >= 4.7 && < 5
                     , bmp >= 1.2.6
                     , bytestring
                     , word8
  default-language:    Haskell2010

test-suite pixels-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bmp
                     , pixels
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eHammarstrom/pixels
